@@ -54,7 +54,7 @@ use vars qw($VIRTUAL_BASE $DOCUMENT_ROOT $UMASK %MIMETYPES $FANCYINDEXING %ICONS
             %ADDRESSBOOK_HOME_SET %CALENDAR_HOME_SET $PRINCIPAL_COLLECTION_SET 
             $ENABLE_TRASH $TRASH_FOLDER $ALLOW_SEARCH $SHOW_STAT $HEADER $CONFIGFILE $ALLOW_ZIP_UPLOAD $ALLOW_ZIP_DOWNLOAD
             $PAGE_LIMIT $ENABLE_SEARCH $ENABLE_GROUPDAV %SEARCH_PROPTYPES %SEARCH_SPECIALCONV %SEARCH_SPECIALOPS
-            @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG $MAXLASTMODIFIEDSIZE 
+            @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG $MAXNAVPATHSIZE
             $THUMBNAIL_WIDTH $ENABLE_THUMBNAIL $ENABLE_THUMBNAIL_CACHE $THUMBNAIL_CACHEDIR $ICON_WIDTH
             $ENABLE_BIND $ALLOW_CHANGEPERM $ALLOW_CHANGEPERMRECURSIVE $LANGSWITCH
             $PERM_USER $PERM_GROUP $PERM_OTHERS
@@ -134,9 +134,9 @@ $VHTDOCS='_webdavcgi_/';
 ## Web interface: width of filename column
 $MAXFILENAMESIZE = 40;
 
-## -- MAXLASTMODIFIEDSIZE
-## Web interface: width of last modified column
-$MAXLASTMODIFIEDSIZE = 20;
+## -- MAXNAVPATHSIZE
+## Web interface: maximum length of the navigation path
+$MAXNAVPATHSIZE = 50;
 
 ## -- ICONS
 ## MIME icons for fancy indexing 
