@@ -14,6 +14,7 @@
 	   - added quota limit exceeded highlighting (GET)
 	   - added extension support (GET)
 	   - added view support (GET)
+	   - fixed long navigation path bug (GET)
      - improved performance with the NYT profiler
      - fixed symlink move bug
      - fixed minor webdav.conf returns wrong result code bug (thanx Andrius Preimantas andrius.preimantas@gmail.com) 
